# kokkos_tests

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
example_apps/convolution_test/: CMakeLists.txt  conv_test.cpp  kernels.h
example_apps/cuda_test/: CMakeLists.txt  cuda_test.cpp
example_apps/diffusion_test/: CMakeLists.txt  diff_test.cpp
example_apps/openmp_test/: CMakeLists.txt  omp_test.cpp
example_apps/reduce_test/: CMakeLists.txt  reduce_test.cpp
